# dierckx-sys

./: Cargo.toml  LICENSE-MIT  README.md  build.rs  license.txt
src/: curfit.md  lib.rs
src/netlib-dierckx/: clocur.f  concur.f  curfit.f  fpbfout.f  fpchec.f  fpched.f  fpclos.f  fpcoco.f  fpcons.f  fpcurf.f  fppara.f  parcur.f  sproot.f
