[package]
name = "dierckx-sys"
version = "0.0.1"
edition = "2018"
description = "Rust-wrapper for Dierckx' B-Splines Curve and Surface Fortran Library"
authors = ["Gerard Harbers", "Harbers Bik LLC"]
repository = "https://github.com/harbik/dierckx-sys"
keywords = ["spline", "interpolation", "curve", "surface", "smoothing", "fitting"]
license = "MIT OR Apache-2.0"

[lib]
crate_type = ["staticlib"]

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"